--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -2,6 +2,9 @@ header.hearder
     .header__colum
         a(href=routes.home)
             i.fab.fa-youtube
+    .header__column
+        form(action=routes.search, method="get")
+            input(type="text", placeholder="Search by term..", name="term")
     .header__colum
         ul
             li
