--- a/views/join.pug
+++ b/views/join.pug
@@ -1,4 +1,12 @@
 extends layouts/main.pug
  
 block content
-    p home
+    .form__container
+        form(action="/login", method="post")
+            input(type="email", name="email", placeholder="email")
+            input(type="text", name="name", placeholder="Full name")
+            input(type="password", name="password", placeholder="password")
+            input(type="password", name="password2", placeholder="Verify Password")
+            input(type="submit", value="Join Now")
+
+    include partials/socialLogin
