--- a/views/login.pug
+++ b/views/login.pug
@@ -1,4 +1,9 @@
 extends layouts/main.pug
  
 block content
-    p home
+    .form__container
+        form(action="/login", method="post")
+            input(type="email", name="email", placeholder="email")
+            input(type="password", name="password", placeholder="password")
+            input(type="submit", value="Login")
+    include partials/socialLogin
