--- a/views/join.pug
+++ b/views/join.pug
@@ -1,8 +1,8 @@
 extends layouts/main.pug
  
 block content
-    .form__container
-        form(action="/login", method="post")
+    .form-container
+        form(action=routes.join, method="post")
             input(type="email", name="email", placeholder="email")
             input(type="text", name="name", placeholder="Full name")
             input(type="password", name="password", placeholder="password")
