--- a/views/changePassword.pug
+++ b/views/changePassword.pug
@@ -1,4 +1,9 @@
 extends layouts/main.pug
  
 block content
-    p Change Password!!
+        .form-container
+        form(action=routes.editProfile, method="post")
+            input(type="text", placeholder="Current Password", name="currentPassword")
+            input(type="text", placeholder="New Password", name="newPassword")
+            input(type="text", placeholder="Verify Password", name="verifyPassword")
+            input(type="submit", value="Change Password")
