--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -9,5 +9,5 @@ block content
             input(type="text", placeholder="name", name="name")
             input(type="email", placeholder="email", name="email")
             input(type="submit", value="Update Profile")
-        a.form-container__link(href=`/users${routes.changePassword}`) Change Password
+        a.form-container(href=`/users${routes.changePassword}`) Change Password
         
