--- a/views/editVideo.pug
+++ b/views/editVideo.pug
@@ -1,4 +1,9 @@
 extends layouts/main.pug
  
 block content
-    p home
+        .form-container
+        form(action=routes.editProfile, method="post")
+            input(type="text", placeholder="Title", name="title")
+            input(type="text", placeholder="Description", name="description")
+            input(type="submit", value="Update Video")
+        a.form-container__link.form-container__ling-delete(href=`/videos${routes.deleteVideo}`) Delete Videoß
