--- a/views/home.pug
+++ b/views/home.pug
@@ -1,5 +1,11 @@
 extends layouts/main.pug
+include mixins/videoBlock.pug
  
 block content
     .videos
-        h1 Video
+        each item in videoDb
+            +videoBlock({
+                title: item.title,
+                views:item.views,
+                videoFile: item.videoFile
+            })
