--- a/views/upload.pug
+++ b/views/upload.pug
@@ -1,4 +1,10 @@
 extends layouts/main.pug
  
 block content
-    p home
+     .form-container
+        form(action=routes.editProfile, method="post")
+            label(for="videoFile") Video file
+            input(type="file", id="videoFile", name="videoFile")
+            input(type="text", placeholder="Title", name="title")
+            input(type="text", placeholder="Description", name="description")
+            input(type="submit", value="Upload Video")
