--- a/views/home.pug
+++ b/views/home.pug
@@ -5,6 +5,7 @@ block content
     .videos
         each item in videoDb
             +videoBlock({
+                id: item.id,
                 title: item.title,
                 views:item.views,
                 videoFile: item.videoFile
