--- a/views/join.pug
+++ b/views/join.pug
@@ -3,10 +3,10 @@ extends layouts/main.pug
 block content
     .form-container
         form(action=routes.join, method="post")
-            input(type="email", name="email", placeholder="email")
-            input(type="text", name="name", placeholder="Full name")
-            input(type="password", name="password", placeholder="password")
-            input(type="password", name="password2", placeholder="Verify Password")
+            input(type="text", name="name", placeholder="Full name", required=true)
+            input(type="email", name="email", placeholder="email", required=true)
+            input(type="password", name="password", placeholder="password", required=true)
+            input(type="password", name="password2", placeholder="Verify Password", required=true)
             input(type="submit", value="Join Now")
 
     include partials/socialLogin
