--- a/views/upload.pug
+++ b/views/upload.pug
@@ -2,9 +2,9 @@ extends layouts/main.pug
  
 block content
      .form-container
-        form(action=routes.editProfile, method="post")
+        form(action=`/videos${routes.upload}`, method="post")
             label(for="videoFile") Video file
-            input(type="file", id="videoFile", name="videoFile")
-            input(type="text", placeholder="Title", name="title")
-            input(type="text", placeholder="Description", name="description")
+            input(type="file", id="videoFile", name="videoFile", required=true)
+            input(type="text", placeholder="Title", name="title", required=true)
+            input(type="text", placeholder="Description", name="description", required=true)
             input(type="submit", value="Upload Video")
