--- a/views/home.pug
+++ b/views/home.pug
@@ -7,6 +7,6 @@ block content
             +videoBlock({
                 id: item.id,
                 title: item.title,
-                views:item.views,
-                videoFile: item.videoFile
+                views: item.views,
+                videoFile: item.fileUrl
             })
