--- a/views/editVideo.pug
+++ b/views/editVideo.pug
@@ -2,8 +2,8 @@ extends layouts/main.pug
  
 block content
         .form-container
-        form(action=routes.editProfile, method="post")
-            input(type="text", placeholder="Title", name="title")
-            input(type="text", placeholder="Description", name="description")
+        form(action=routes.editVideo(video.id), method="post")
+            input(type="text", placeholder="Title", name="title", value=video.title)
+            textarea(name="description" placeholder="Description")=video.description
             input(type="submit", value="Update Video")
-        a.form-container__link.form-container__ling-delete(href=`/videos${routes.deleteVideo}`) Delete Videoß
+        a.form-container__link.form-container__ling-delete(href=routes.deleteVideo(video.id)) Delete Video
