--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -8,3 +8,8 @@ block content
         h5.video__title=video.title
         span.video__views=video.views
         p.video__description=video.description
+    .vidoe__comments
+        if video.comments.length === 1
+            span.video_comement-number 1 commentß
+        else 
+            span.video_comment-number #{video.comments.length} comments
