--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -4,10 +4,12 @@ block content
     block content
     .form-container
         form(action=routes.editProfile, method="post")
-            label(for="avatar") Avatar
-            input(type="file", id="avatar", name="avatar")
+            div.fileUpload
+                label(for="avatar") Avatar
+                input(type="file", id="avatar", name="avatar")
             input(type="text", placeholder="name", name="name")
             input(type="email", placeholder="email", name="email")
             input(type="submit", value="Update Profile")
-        a.form-container(href=`/users${routes.changePassword}`) Change Password
+        a.form-container(href=`/users${routes.changePassword}`) 
+            button Change Password
         
