--- a/views/upload.pug
+++ b/views/upload.pug
@@ -3,8 +3,9 @@ extends layouts/main.pug
 block content
      .form-container
         form(action=`/videos${routes.upload}`, method="post", enctype="multipart/form-data")
-            label(for="videoFile") Video file
-            input(type="file", id="videoFile", name="videoFile", required=true, accept="video/*")
+            div.fileUpload
+                label(for="videoFile") Video file
+                input(type="file", id="videoFile", name="videoFile", required=true, accept="video/*")
             input(type="text", placeholder="Title", name="title", required=true)
             input(type="text", placeholder="Description", name="description", required=true)
             input(type="submit", value="Upload Video")
