--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -1,8 +1,9 @@
 .social-login
     button.social-login--github
-        span
-            i.fab.fa-github
-        |Contine with Gihub
+        a(href=routes.github)
+            span
+                i.fab.fa-github
+            |Contine with Gihub
 
     button.social-login--facebook
         span
