--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -6,6 +6,7 @@
             |Contine with Gihub
 
     button.social-login--facebook
-        span
-            i.fab.fa-facebook
-        |Contine with Facebook
+        a(href=routes.facebook)
+            span
+                i.fab.fa-facebook
+            |Contine with Facebook
