--- a/views/userDetail.pug
+++ b/views/userDetail.pug
@@ -1,4 +1,7 @@
 extends layouts/main.pug
  
 block content
-    p user Detail
+    .user-profile
+        .uer-profile__header
+            img.avatar(src=user.avatarUrl)
+            h4.profile__userName=user.name
