--- a/views/changePassword.pug
+++ b/views/changePassword.pug
@@ -2,7 +2,7 @@ extends layouts/main.pug
  
 block content
         .form-container
-            form(action=routes.editProfile, method="post")
+            form(action=`/users${routes.changePassword}`, method="post")
                 input(type="text", placeholder="Current Password", name="currentPassword")
                 input(type="text", placeholder="New Password", name="newPassword")
                 input(type="text", placeholder="Verify Password", name="verifyPassword")
