--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -5,8 +5,9 @@ block content
         .video__player
             video(src=`/${video.fileUrl}`, controls=true)
         .video__info
-            a(href=routes.editVideo(video.id)) 
-                button Edit Video
+            if video.creator.id === loggedUser.id
+                a(href=routes.editVideo(video.id)) 
+                    button Edit Video
             h5.video__title=video.title
             p.video__description=video.description
                 if video.views === 1
